# cloud_drive

./: README.md  manage.py  pyproject.toml  requirements.txt
cloud_drive/: asgi.py  settings.py  urls.py  wsgi.py
profiles/: urls.py
profiles/migrations/: 0001_initial.py
profiles/templates/profiles/registration/: login.html
resources/: admin.py  forms.py  handlers.py  models.py  urls.py  utils.py  validators.py  views.py
resources/migrations/: 0001_initial.py  0002_alter_file_slug.py  0002_auto_20210830_1924.py  0003_file_is_deleted.py  0004_alter_file_slug.py
resources/static/css/: style.css
resources/templates/: base.html
resources/templates/resources/: index.html
resources/templates/resources/file/: file_create.html  file_detail.html  file_list.html
resources/templates/resources/post/: post_create.html  post_detail.html  post_list.html
resources/templates/resources/registration/: login.html
resources/views/: file.py  index.py  post.py
tokens/: admin.py  forms.py  models.py
tokens/migrations/: 0001_initial.py  0002_alter_token_token.py  0002_auto_20210830_1924.py  0003_alter_token_token.py  0004_alter_token_token.py  0005_alter_token_enabled_count.py
