[tool.poetry]
name = "cloud_drive"
version = "0.1.0"
description = ""
authors = ["ahmetveburak <ahmetbozyurtt@gmail.com>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
martor = "^1.6.4"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120